# retrievalist-parsers

./: .gitmodules  README.md  main.py  pyproject.toml  readme.md  result.json  test.py  test.py final  test_final.py
pdfstructure.egg-info/: PKG-INFO
src/retrievalist_parsers/: printer.py  source.py  utils.py
src/retrievalist_parsers/analysis/: annotate.py  sizemapper.py  styledistribution.py
src/retrievalist_parsers/hierarchy/: detectheader.py  headercompare.py  parser.py  traversal.py
src/retrievalist_parsers/model/: document.py  style.py
tests/: helper.py  test_custom_use_cases.py  test_document.py  test_headercompare.py  test_hierarchy.py  test_printer.py  test_style_analyser.py  test_traversal.py  test_utils.py
tests/resources/parsed/: interview_cheatsheet.json  interview_cheatsheet_pretty.txt
